force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__HMDA_Date_Rate_Set__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HMDA_Date_Rate_Set__c</fullName>
    <description>--DEPRECATED-- This field is optional unless the loan requires HMDA, then it is required. It is manually populated. This date is used to determine the average prime offer rate for a comparable transaction is the date on which the loan&apos;s interest rate was set by the financial institution for the final time before closing.</description>
    <label>-D Date Interest Rate Set</label>
    <type>Date</type>
</CustomField>