force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__HMDA_Denial_Reasons__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HMDA_Denial_Reasons__c</fullName>
    <description>--DEPRECATED-- This field is optional unless the loan requires HMDA, then it is required. It is manually populated. This field indicates the principal reason, or reasons, for denial.  You may enter up to three (3) applicable codes.</description>
    <label>-D Denial Reasons (Select up to three)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Code 1—Debt-to-income ratio</fullName>
            </value>
            <value>
                <fullName>Code 2—Employment history</fullName>
            </value>
            <value>
                <fullName>Code 3—Credit history</fullName>
            </value>
            <value>
                <fullName>Code 4—Collateral</fullName>
            </value>
            <value>
                <fullName>Code 5—Insufficient cash</fullName>
            </value>
            <value>
                <fullName>Code 6—Unverifiable information</fullName>
            </value>
            <value>
                <fullName>Code 7—Credit application incomplete</fullName>
            </value>
            <value>
                <fullName>Code 8—Mortgage insurance denied</fullName>
            </value>
            <value>
                <fullName>Code 9—Other</fullName>
            </value>
            <value>
                <fullName>Withdrawn or closed for incompleteness</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>