force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__HMDA_FIPS_County_Code_Text__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HMDA_FIPS_County_Code_Text__c</fullName>
    <description>--DEPRECATED-- This field is optional unless the loan requires HMDA, then it is required. It is manually populated. This field indicates the three-digit Federal Information Processing Standards (FIPS) County Code of the property securing the loan (or proposed to secure a loan)</description>
    <inlineHelpText>FIPS County Code</inlineHelpText>
    <label>-D Three Digit County Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>