force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__HMDA_FIPS_State_Code__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HMDA_FIPS_State_Code__c</fullName>
    <description>--DEPRECATED-- The two digit code for the state.</description>
    <inlineHelpText>FIPS State Code</inlineHelpText>
    <label>-D Two Digit State Code</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>