force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__HMDA_FIPS_State_Code_Text__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HMDA_FIPS_State_Code_Text__c</fullName>
    <description>--DEPRECATED-- This field is optional unless the loan requires HMDA, then it is required. It is manually populated. This field indicates the state of the property securing the loan (or that has been proposed to secure a loan).</description>
    <inlineHelpText>FIPS State Code</inlineHelpText>
    <label>-D Two Digit State Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>