force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__HMDA_MSA_MD_Number__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HMDA_MSA_MD_Number__c</fullName>
    <description>--Deprecated-- The five-digit metropolitan statistical area (MSA) number or, if available, the five-digit metropolitan division (MD) number. Used in HMDA reporting.</description>
    <label>-D Five Digit MSA/MD Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>