force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__HMDA_Preapproval_Requested__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HMDA_Preapproval_Requested__c</fullName>
    <description>--DEPRECATED-- This field is optional unless the loan requires HMDA, then it is required. It is manually populated. This field indicates whether the transaction involved a pre-approval request for a home purchase loan under a pre-approval program.</description>
    <label>-D Request for Preapproval</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Code 1—Preapproval requested</fullName>
            </value>
            <value>
                <fullName>Code 2—Preapproval not requested</fullName>
            </value>
            <value>
                <fullName>Code 3—Not applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>