force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__HMDA_Purchaser_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HMDA_Purchaser_Type__c</fullName>
    <description>--DEPRECATED--This field is optional unless the loan requires HMDA, then it is required. It is manually populated. This field indicates the type of entity that purchased the loan.</description>
    <label>-D Type of Purchase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Code 0—Loan was not originated or was not sold in calendar year covered by register</fullName>
            </value>
            <value>
                <fullName>Code 1—Fannie Mae (FNMA)</fullName>
            </value>
            <value>
                <fullName>Code 2—Ginnie Mae (GNMA)</fullName>
            </value>
            <value>
                <fullName>Code 3—Freddie Mac (FHLMC)</fullName>
            </value>
            <value>
                <fullName>Code 4—Farmer Mac (FAMC)</fullName>
            </value>
            <value>
                <fullName>Code 5—Private securitization</fullName>
            </value>
            <value>
                <fullName>Code 6—Commercial bank, savings bank, or savings association</fullName>
            </value>
            <value>
                <fullName>Code 7—Life insurance company, credit union, mortgage bank, or finance company</fullName>
            </value>
            <value>
                <fullName>Code 8—Affiliate institution</fullName>
            </value>
            <value>
                <fullName>Code 9—Other type of purchaser</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>