force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__HMDA_Purpose__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HMDA_Purpose__c</fullName>
    <description>--DEPRECATED--This field is optional unless the loan requires HMDA, then it is required. It is manually populated. This field indicates whether the transaction is for home purchase, home improvement, refinancing, cash-out refinancing, or another purpose.</description>
    <inlineHelpText>HMDA Loan Purpose</inlineHelpText>
    <label>-D Purpose of Loan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Code 1—Home purchase</fullName>
            </value>
            <value>
                <fullName>Code 2—Home improvement</fullName>
            </value>
            <value>
                <fullName>Code 3—Refinancing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>