force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__HMDA_Rate_Spread__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HMDA_Rate_Spread__c</fullName>
    <description>--DEPRECATED--This field is optional unless the loan requires HMDA, then it is required. It is manually populated. This field indicates the rate spread which is the difference between the annual percentage rate and average prime offer. The price data takes the form of a &quot;rate spread.&quot; Lenders must report the spread (difference) between the annual percentage rate (APR) on a loan and the rate on treasury securities of comparable maturity—but only for loans with spreads above designated thresholds. So rate spreads are reported for some, but not all, reported home loans. The rate spread, along with Lien Status and HOEPA, help interpret the pricing data.</description>
    <label>-D Rate Spread (##.## format)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>