force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__HMDA_Reportable__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HMDA_Reportable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field can be manually selected, or can be set to be automatically set via the questionnaire. When selected, it indicates that this the loan falls under a category that makes it HMDA reportable. When unselected the loan is not HMDA reportable. By default, this field is unselected</description>
    <label>HMDA Reportable</label>
    <type>Checkbox</type>
</CustomField>