force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__HMDA_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HMDA_Type__c</fullName>
    <description>--DEPRECATED-- This field is optional unless the loan requires HMDA, then it is required. It is manually populated. This field indicates whether the loan or application is insured by the Federal Housing Administration, guaranteed by the Veterans Administration, Rural Housing Service, or Farm Service Agency.</description>
    <inlineHelpText>HMDA Loan Type</inlineHelpText>
    <label>-D Type of Loan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Code 1—Conventional (any loan other than FHA, VA, FSA, or RHS loans)</fullName>
            </value>
            <value>
                <fullName>Code 2—FHA-insured (Federal Housing Administration)</fullName>
            </value>
            <value>
                <fullName>Code 3—VA-guaranteed (Veterans Administration)</fullName>
            </value>
            <value>
                <fullName>Code 4—FSA/RHS-guaranteed (Farm Service Agency or Rural Housing Service)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>