force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Imported__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Imported__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field should not be altered. This field is used by the nCino Data Administrator to indicate loans that were created prior to nCino.</description>
    <inlineHelpText>The Imported flag represents legacy loans that were created, processed and booked prior to the adoption of nCino.</inlineHelpText>
    <label>Imported</label>
    <type>Checkbox</type>
</CustomField>