force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Index__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Index__c</fullName>
    <description>This field is optional. It is manually selected. It is used to specify the index the lending rate follows.</description>
    <label>Index</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prime</fullName>
                <label>WSJ Prime</label>
            </value>
            <value>
                <fullName>Libor</fullName>
            </value>
            <value>
                <fullName>WSJP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>