force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Interest_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Interest_Amount_Paid__c</fullName>
    <description>This field is optional. It is manually populated and represents the total amount of interest paid so far.</description>
    <inlineHelpText>The amount of interest paid to date.</inlineHelpText>
    <label>Interest (Amt) Paid to Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>