force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Interest_Only_Months__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Interest_Only_Months__c</fullName>
    <description>This field is optional. It is manually populated. It is used to specify the number of monthly interest-only payments for this loan.</description>
    <inlineHelpText>Number of payment months that are interest only. Don&apos;t include these months in the total month terms field above.</inlineHelpText>
    <label>Interest Only Months</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>