force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Interest_Rate_Adjustment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Interest_Rate_Adjustment_Frequency__c</fullName>
    <description>This field is optional. It is manually populated. It is used to specify how often an interest rate can be adjusted (e.g., Weekly, Monthly, Quarterly, Annually, etc.).</description>
    <label>Interest Rate Adjustment Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-Annual</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Every Two Years</fullName>
            </value>
            <value>
                <fullName>Every Three Years</fullName>
            </value>
            <value>
                <fullName>Every Five Years</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>