force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Is_Booked__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Booked__c</fullName>
    <description>This field is automatically selected via formula. When enabled, it indicates a loan has met the stage and status requirements that a financial institution considers to be booked. This is to allow an insight into how many loans have been booked, without having to check the actual loan stage. When disabled, the loan is not booked. By default, it is disabled.</description>
    <formula>CONTAINS(LLC_BI__Product_Reference__r.LLC_BI__Product_Type__r.LLC_BI__Booked__r.LLC_BI__All_Values__c, LLC_BI__Stage_And_Status__c)</formula>
    <label>Is Booked</label>
    <type>Checkbox</type>
</CustomField>