force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Is_Current_Takedown__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Current_Takedown__c</fullName>
    <description>This field specifies if the loan level is a current takedown, or the lowest level in a multi-tiered hierarchy. Multi-tiered loans are only supported through utilizing Product Package. This field auto-populates if configured in the org.</description>
    <formula>IF(ISPICKVAL(LLC_BI__Structure_Hierarchy__c, &apos;Current Takedown&apos;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Current Takedown</label>
    <type>Checkbox</type>
</CustomField>