force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Is_In_Review__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_In_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is automatically selected via trigger. When enabled, it is used to indicate if the loan or package is in review. When disabled, it indicates the loan or package is not in review. By default, it is disabled.</description>
    <inlineHelpText>Indicate if the loan or package is in review</inlineHelpText>
    <label>In Review</label>
    <type>Checkbox</type>
</CustomField>