force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Is_Limit__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Limit__c</fullName>
    <description>This field auto-populates and indicates if the loan level is a either a limit or the second highest level in a multi-tiered hierarchy. Product Package must be utilized to support multi-tiered loans.</description>
    <formula>IF(ISPICKVAL(LLC_BI__Structure_Hierarchy__c, &apos;Limit&apos;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Limit</label>
    <type>Checkbox</type>
</CustomField>