force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Is_Main__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Main__c</fullName>
    <description>This field is auto-populated and identifies if the loan level is a Main Facility or the highest level in a multi-tiered hierarchy. Product Package must be utilized to support multi-tiered loans.</description>
    <formula>IF(ISPICKVAL(LLC_BI__Structure_Hierarchy__c, &apos;Main&apos;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Main</label>
    <type>Checkbox</type>
</CustomField>